--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -132,6 +132,27 @@ textarea {
     color: #5f5f5f;
 }
 
+.review-list {
+    background: #f8f8f8;
+    width: 100%;
+    border-right: 1px solid #c4c4c4;
+    height: 500px;
+    overflow-y: scroll;
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
+}
+
+.review-details h5 {
+    font-size: 19px;
+    margin: 0 0 8px 0;
+}
+
+.review-details p {
+    color: #989898;
+    margin-top: 5px;
+}
+
 .review-container {
-    margin: 5px 10px;
+    border-bottom: 1px solid #c4c4c4;
+    margin: 0;
+    padding: 18px 16px 10px;
 }
