--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -51,21 +51,17 @@
 
                 </tbody>
             </table>
-
-            <h3 data-toggle="tooltip" data-placement="left" title="Press on reviewer to see a full review">Reviews (@ViewBag.StatsData.ReviewCount)</h3>
-            <div class="d-flex flex-wrap">
+            <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
+            <div class="review-list">
                 @foreach (Review review in ViewBag.Course.Reviews)
                 {
-                    <div class="review-container" data-toggle="collapse" href="#collapse-@review.Id" role="button" aria-expanded="false" aria-controls="collapse-@review.Id">
-                        <h3>
-                            <i class="fas fa-user-circle"></i> @review.User.Name
-                        </h3>
-                        <p class="mr-5">
-                            <i class="fas fa-star"></i>  Rating @review.OveralRating/10
-                        </p>
-                        <div class="collapse" id="collapse-@review.Id">
-                            <div class="card card-body">
-                                @review.Text
+                    <div class="review-container">
+                        <div class="row">
+                            <i class="fas fa-user-circle fa-5x col-sm-2"></i>
+                            <div class="review-details col-sm-10">
+                                <h5>@review.User.Name</h5>
+                                <i class="fas fa-star"></i> Rating @review.OveralRating/10
+                                <p>@review.Text</p>
                             </div>
                         </div>
                     </div>
@@ -96,8 +92,3 @@
         </div>
     </div>
 </div>
-
-@section scripts
-{
-    @Scripts.Render("~/bundles/review")
-}
