--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -51,26 +51,17 @@
 
                 </tbody>
             </table>
-
             <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
-            <div class="d-flex flex-wrap">
+            <div class="review-list">
                 @foreach (Review review in ViewBag.Course.Reviews)
                 {
-                    <div class="review-container card">
-                        <h4>@review.User.Name</h4>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                <p class="mr-5">
-                                    <i class="fas fa-star"></i>
-                                </p>
-                                <p class="mr-5">
-                                    Rating @review.OveralRating/10
-                                </p>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                @review.Text
+                    <div class="review-container">
+                        <div class="row">
+                            <i class="fas fa-user-circle fa-5x col-sm-2"></i>
+                            <div class="review-details col-sm-10">
+                                <h5>@review.User.Name</h5>
+                                <i class="fas fa-star"></i> Rating @review.OveralRating/10
+                                <p>@review.Text</p>
                             </div>
                         </div>
                     </div>
