--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -41,33 +41,25 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-6">
             <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
-            <div class="d-flex flex-wrap">
+            <div class="review-list">
                 @foreach (Review review in ViewBag.StudyProgram.Reviews)
                 {
-                    <div class="review-container card">
-                        <h4>@review.User.Name</h4>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                <p class="mr-5">
-                                    <i class="fas fa-star"></i>
-                                </p>
-                                <p class="mr-5">
-                                    Rating @review.OveralRating/10
-                                </p>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                @review.Text
+                    <div class="review-container">
+                        <div class="row">
+                            <i class="fas fa-user-circle fa-5x col-sm-2"></i>
+                            <div class="review-details col-sm-10">
+                                <h5>@review.User.Name</h5>
+                                <i class="fas fa-star"></i> Rating @review.OveralRating/10
+                                <p>@review.Text</p>
                             </div>
                         </div>
                     </div>
                 }
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
             <h3>Courses (@ViewBag.StudyProgram.Courses.Count)</h3>
             <div class="flex-wrap">
                 @foreach (Course course in ViewBag.StudyProgram.Courses)
@@ -81,7 +73,8 @@
                                 <p class="mr-5">
                                     <i class="fas fa-star"></i>
                                 </p>
-                                @if (course.Reviews.Count > 0) {
+                                @if (course.Reviews.Count > 0)
+                                {
                                     <p class="mr-5">Overall @Math.Round(course.Reviews.Average(r => r.OveralRating), 2).ToString()</p>
                                 }
                             </div>
@@ -98,5 +91,3 @@
         </div>
     </div>
 </div>
-
-
