--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -4,6 +4,7 @@
     padding: 0;
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: Roboto, sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
