--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,38 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - University Advisor</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet" />
     @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("stylesheets", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("University Advisor", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                @Html.Partial("_LoginPartial")
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="@Url.RouteUrl("universities_list")">Universities</a></li>
-                    <li><a href="@Url.RouteUrl("review_page")">Leave a review!</a></li>
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <li><a href="@Url.RouteUrl("admin_page")">Admin</a></li>
-                    }
-                </ul>
-            </div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("University Advisor", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        </div>
+        <div class="navbar-collapse collapse">
+            @Html.Partial("_LoginPartial")
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="@Url.RouteUrl("universities_list")">Universities</a></li>
+                <li><a href="@Url.RouteUrl("review_page")">Leave a review!</a></li>
+                @if (User.IsInRole("Admin"))
+                {
+                    <li><a href="@Url.RouteUrl("admin_page")">Admin</a></li>
+                }
+            </ul>
         </div>
     </div>
-    <div class="container body-content mt-50">
-        @RenderBody()
-    </div>
-    
+    @RenderBody()
+
     <div class="container body-content">
         <hr />
         @Html.Partial("_FooterPartial")
