--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - University Advisor</title>
+    <link runat="server" rel="shortcut icon" href="~/Assets/images/favicon.ico" type="image/x-icon" />
+    <link runat="server" rel="icon" href="~/Assets/images/favicon.ico" type="image/ico" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet" />
     @Styles.Render("~/bundles/css")
