--- a/Assets/css/faculty.css
+++ b/Assets/css/faculty.css
@@ -1,11 +1,4 @@
-﻿.about-section {
-    height: 165px;
-    overflow-y: auto;
-    padding: 6px;
-    box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1);
-}
-
-.faculty-map {
+﻿.faculty-map {
     height: 420px;
     width: 100%;
     border: 0;
