--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -55,6 +55,10 @@ textarea {
     margin-right: 5px;
 }
 
+.ml-10 {
+    margin-left: 10px;
+}
+
 .w-50 {
     width: 50%;
 }
@@ -188,11 +192,31 @@ textarea {
         background: black;
     }
 
-@media only screen and (max-width: 1200px) {
-    .carousel-w {
-        max-width: 80%;
+.cloud-tag {
+    padding: 10px 15px;
+    border-radius: 20px;
+    background: #313131;
+    color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 5px;
+    transition: all .2s;
+}
+
+    .cloud-tag:hover {
+        color: white;
+        text-decoration: none;
+        transform: scale(1.1, 1.1);
+        background: black;
     }
 
+    .cloud-tag:active {
+        color: white;
+        text-decoration: none;
+    }
+
+@media only screen and (max-width: 1200px) {
     .item {
         height: 400px;
     }
@@ -225,10 +249,6 @@ textarea {
 }
 
 @media only screen and (max-width: 400px) {
-    .carousel-w {
-        max-width: 100%;
-    }
-
     .item {
         height: 180px;
     }
@@ -241,9 +261,5 @@ textarea {
     .compare-link {
         padding-top: 5px;
         padding-bottom: 5px;
-    }
-
-    .sm-mt-20 {
-        margin-top: 20px;
     }
 }
