--- a/Assets/css/university.css
+++ b/Assets/css/university.css
@@ -1,8 +1,7 @@
 ﻿.about-section {
-    height: 165px;
-    overflow-y: auto;
-    padding: 6px;
+    padding: 12px 10px;
     box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1);
+    min-height: 100px;
 }
 
 .compare-link {
@@ -17,6 +16,8 @@
     width: 100%;
     border: 0;
     margin-top: 10px;
+    position: relative;
+    bottom: -6px;
 }
 
 .university-container {
@@ -28,10 +29,28 @@
     display: flex;
 }
 
+.dormitory-container {
+    border-radius: 3px;
+    margin: 10px;
+    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+}
+
+    .dormitory-container > div:first-child {
+        padding: 15px 20px 0 20px;
+    }
+
 @media only screen and (max-width: 1024px) {
     .university-container {
         width: 100%;
         max-width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .dormitory-container {
+        max-width: unset;
     }
 }
 
